...
        name="Create Challenge"
        component={CreateChallengeScreen}
        options={{
          tabBarIcon: ({ focused }) => (
            <View
              className={clsx("flex flex-col items-center justify-center")}
              testID="bottom_nav_bar_create_challenge_btn"
            >
              {focused ? (
                <CreateFillSvg fill={"#FF7B1C"} />
              ) : (
                <CreateSvg fill={"#6C6E76"} />
              )}
...
