...
            headerTitle: () => (
              <AppTitle title={t("new_challenge_screen.new_challenge") || ""} />
            ),
            headerLeft: ({}) => (
              <TouchableOpacity
                onPress={() => navigation.goBack()}
                testID="user_create_challenge_close_btn"
                className="ml-3"
              >
                <Ionicons name="close" size={24} color="#000" />
              </TouchableOpacity>
            ),
          })}
...
