...
    fetchPackages();
  }, [newChallengeId]);

  return (
    <SafeAreaView
      className="flex-1 bg-white"
      testID="user_create_challenge_screen"
    >
      {isCompany && (
        <PackageInfoDialog
          isVisible={isShowPackageRemain}
          onClosed={() => setIsShowPackageRemain(false)}
          packages={packages}
...
